fix(gds-hint): fix overflow in safari

--- a/src/components/gds-hint/gds-hint.scss
+++ b/src/components/gds-hint/gds-hint.scss
@@ -10,6 +10,7 @@
   background: none;
   padding: 0;
   outline: none;
+  height: var(--icon-font-size);
 
   &-content {
     outline: none;
